# DatabaseCompPy

./: Config.py  DataComparer.py  DataExtractor.py  DatabaseConnection.py  Mapping.py  README.MD  ReportGenerator.py  db_config.json  main.py  mappings.json  pyproject.toml
templates/: report_template.html
